--- a/index.html
+++ b/index.html
@@ -12,6 +12,56 @@
     
     <div class="player">
         <video src="https://pixabay.com/videos/download/video-31377_tiny.mp4?attachment" class="video"></video>
+        <!-- Show controls -->
+        <div class="show-controls">
+            <div class="controls-container">
+                <!-- Progress bar -->
+                <div class="progress-range" title="Seek">
+                    <div class="progress-bar"></div>
+                </div>
+                <div class="control-group">
+                    <!-- Left controls -->
+                    <div class="controls-left">
+                        <!-- Play/Pause -->
+                        <div class="play-controls">
+                            <i class="fas fa-play" id="play-btn" title="PLay"></i>
+                        </div>
+                        <!-- Volume controls -->
+                        <div class="volume">
+                            <div class="volume-icon">
+                                <i class="fas fa-volume-up" title="mute" id="volume-icon"></i>
+                            </div>
+                            <div class="volume-range" title="Change Volume">
+                                <div class="volume-bar"></div>
+                            </div>
+                    
+                        </div>
+                    </div>
+                    <!-- Right controls -->
+                    <div class="controls-right">
+                        <!-- Speed -->
+                        <div class="speed" title="Playback rate">
+                            <select name="playbackRate" class="player-speed">
+                            <option value="0.5">0.5 x</option>
+                            <option value="0.75">0.75 x</option>
+                            <option value="1" selected>1 x</option>
+                            <option value="1.5">1.5 x</option>
+                            <option value="2">2 x</option>
+                        </select>
+                        </div>
+                        <!-- Time -->
+                        <div class="time">
+                            <span class="time-elapsed">00:00</span>
+                            <span class="time-duration">2:38</span>
+                        </div>
+                        <!-- Fullscreen -->
+                        <div class="fullscreen">
+                            <i class="fas fa-expand"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- Script -->
     <script src="script.js" playsinline></script>
